# dargo

./: license  makefile  readme.md
dargo-client/: index.css  index.html  package-lock.json  package.json  webpack.config.js
dargo-client/src/: index.ts  message.ts  socket.ts
dargo-server/: Cargo.toml
dargo-server/src/: main.rs  message.rs  uinput.rs  wsserver.rs
