[package]
name = "dargo-server"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.1", features = ["ws"] }
evdev-rs = "0.6.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "net", "rt-multi-thread"] }
